--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
                         <h2>About Me</h2>
                         <br/>
                         <h3>
-                            Hi! I'm Dennis. I graduated with a Bachelor's in Management Information Systems from SJSU, where I discovered my passion for coding and web development. With my MIS background, I found myself drawn to the dynamic world of frontend development. Motivated by curiosity and determination, I embarked on a self-taught journey to master the art of crafting beautiful and functional user interfaces. Beyond frontend development, I've developed an interest in cybersecurity, specifically, AppSec.  When I'm not coding, you can find me running, lifting, and eating!
+                            Hi! I'm Dennis. I graduated with a Bachelor's in Management Information Systems from SJSU, where I discovered my passion for coding and web development. Motivated by curiosity and determination, I embarked on a self-taught journey to crafting beautiful and functional user interfaces. Beyond frontend development, I've developed an interest in cybersecurity, specifically, AppSec.  When I'm not coding, you can find me running, lifting, and eating!
                         </h3>                           
                     </div>
                 </div>
