Updated profile pic and added DogMatch project

--- a/index.html
+++ b/index.html
@@ -51,13 +51,12 @@
         <!--About-->
             <section id="about" class="hiddenRight condensed-text">
                 <div class="content-wrapper">
-                    <img src="./src/DennisHeadShot.jpg" class="left-img">
+                    <img src="./src/Dennis Grad-12.jpg" class="left-img">
                     <div class="text-content">
                         <br/>
                         <h2>About Me</h2>
-                        <br/>
                         <h3>
-                            Hi! I'm Dennis. I graduated with a Bachelor's in Management Information Systems from SJSU, where I discovered my passion for coding and web development. Motivated by curiosity and determination, I embarked on a self-taught journey to crafting beautiful and functional user interfaces. Beyond frontend development, I've developed an interest in cybersecurity, specifically, AppSec.  When I'm not coding, you can find me running, lifting, and eating!
+                            Hi, I'm Dennis. I graduated with a Bachelor's in Management Information Systems from SJSU, where I discovered my passion for coding and web development. Motivated by curiosity and determination, I embarked on a self-taught journey to crafting beautiful and functional user interfaces. Beyond frontend development, I've developed an interest in cybersecurity, specifically, AppSec.  When I'm not coding, you can find me running, lifting, or trying new foods!
                         </h3>                           
                     </div>
                 </div>
@@ -71,12 +70,19 @@
                         </a>                       
                     </div>
                     <div class="logo hidden">
+                        <a href="https://github.com/dennisthai/DogMatch">
+                            <img src="./src/DogMatchPic.png"/>
+                        </a>                        
+                    </div> 
+                    <div class="logo hidden">
                         <a href="https://github.com/dennisthai/FinanceDashboard">
                             <img src="./src/Finance Dashboard.png"/>
                         </a>                        
-                    </div>                    
+                    </div>                                   
                 </div>
             </section>
+            
+            <!--Cursor-->
             <div class="circle"></div>
             <div class="circle"></div>
             <div class="circle"></div>
