Updated resume navbar

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="#about" class="hoverEffect fancy word">About</a></li>
                 <li><a href="#projects" class="hoverEffect fancy word">Projects</a></li>
-                <li><a href="https://docs.google.com/document/d/e/2PACX-1vQY-W_EfthJzc3nZwiCJ9zSubgr1xPMGnEPzUEVxZ1zIOhbNqaUsqj9YSK5LjkWJpjoJNbeGIOsnsxt/pub?embedded=true" target="_blank" class="hoverEffect fancy word">Resume</a></li>
+                <li><a href="https://docs.google.com/document/d/e/2PACX-1vQY-W_EfthJzc3nZwiCJ9zSubgr1xPMGnEPzUEVxZ1zIOhbNqaUsqj9YSK5LjkWJpjoJNbeGIOsnsxt/pub?embedded=true" id="resume-link" class="hoverEffect fancy word">Resume</a></li>
             </ul>               
         </header>
         <!-- <section class="banner"></section>     -->
