Added LinkedIn and Github new tab  when clicked

--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
                         </a>                               
                     </li>
                     <li>
-                        <a href="https://www.linkedin.com/in/dennis-thai/" class="fancy word">
+                        <a href="https://www.linkedin.com/in/dennis-thai/" id="linkedIn-link" class="fancy word">
                             <i class="fab fa-linkedin"></i>   
                         </a>                               
                     </li>
                     <li>
-                        <a href="https://github.com/dennisthai" class="fancy word">
+                        <a href="https://github.com/dennisthai" id="github-link" class="fancy word">
                             <i class="fab fa-github"></i>  
                         </a>                               
                     </li>
