Projects now open new tab when clicked

--- a/index.html
+++ b/index.html
@@ -65,17 +65,17 @@
                 <h2>Projects</h2>
                 <div class="logos">
                     <div class="logo hidden">
-                        <a href="https://github.com/dennisthai/JobListings_React">
+                        <a href="https://github.com/dennisthai/JobListings_React" id="joblistings-link">
                             <img src="./src/Job Listings.png"/>
                         </a>                       
                     </div>
                     <div class="logo hidden">
-                        <a href="https://github.com/dennisthai/DogMatch">
+                        <a href="https://github.com/dennisthai/DogMatch" id="dogmatch-link" >
                             <img src="./src/DogMatchPic.png"/>
                         </a>                        
                     </div> 
                     <div class="logo hidden">
-                        <a href="https://github.com/dennisthai/FinanceDashboard">
+                        <a href="https://github.com/dennisthai/FinanceDashboard" id="financedashboard-link">
                             <img src="./src/Finance Dashboard.png"/>
                         </a>                        
                     </div>                                   
