Updated Resume link index.html

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a href="#about" class="hoverEffect fancy word">About</a></li>
                 <li><a href="#projects" class="hoverEffect fancy word">Projects</a></li>
-                <li><a href="https://docs.google.com/document/d/e/2PACX-1vQY-W_EfthJzc3nZwiCJ9zSubgr1xPMGnEPzUEVxZ1zIOhbNqaUsqj9YSK5LjkWJpjoJNbeGIOsnsxt/pub?embedded=true" id="resume-link" class="hoverEffect fancy word">Resume</a></li>
+                <li><a href="https://docs.google.com/document/d/e/2PACX-1vR5-XK5j4R7Wm0CjbfjcTQKMRLeYEUBRCdF4mkbvE77p1VKU-g9R0w0a9bhvbdSEm9gb9W1jIXX6Dhb/pub" id="resume-link" class="hoverEffect fancy word">Resume</a></li>
             </ul>               
         </header>
         <!-- <section class="banner"></section>     -->
